name:                earthquake
version:             0.1
synopsis:            The Elm Architecture, Revisited
description:         MVC framework for the Haskell javascript-bridge, inspired by Elm
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
copyright:           Copyright (c) 2019 The University of Kansas
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md, HISTORY.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1

data-files:
  examples/UpDown.html
  examples/Slider.html
  examples/Sliders.html

source-repository head
  type:                git
  location:            https://github.com/ku-fpg/earthquake

library
  exposed-modules:     Network.Earthquake.Cmd,
                       Network.Earthquake.Remote,
                       Network.Earthquake.Update,
                       Network.Earthquake.Widget,
                       Network.Earthquake.Widget.Button,
                       Network.Earthquake.Widget.Slider,
                       Network.Earthquake.Runtime,
                       Network.JavaScript.Widgets
  -- other-modules:
  -- other-extensions:
  build-depends:       base                 >= 4.9     && < 4.14
                     , binary               >= 0.8     && < 0.9
                     , aeson                >= 1.0     && < 1.5
                     , containers           >= 0.5     && < 0.7
                     , free                 >= 4.12    && < 5.2
                     , scientific           >= 0.3.4.9 && < 0.4
                     , stm                  >= 2.4     && < 2.6
                     , text                 >= 1.2     && < 1.3
                     , transformers         >= 0.4     && < 0.6
                     , unordered-containers >= 0.2.7   && < 0.3
                     , wai                  >= 3.2     && < 3.3
                     , wai-websockets       >= 3.0.1   && < 3.1
                     , websockets           >= 0.10    && < 0.13
                     , lens-family          >= 1.2.1   && < 1.3
                     , bifunctors           >= 5.0     && < 6.0
                     , javascript-bridge    >= 0.2.0   && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable earthquake-up-down
  main-is:             UpDown.hs
  other-modules:       Paths_earthquake
  build-depends:       base                 >= 4.9 && < 4.14
                     , earthquake
                     , aeson                >= 1.0 && < 1.5
                     , javascript-bridge    == 0.2.*
                     , scotty               == 0.11.*
  hs-source-dirs:      examples
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall
